discussion/kv_engine/163784/163784_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-48925 2/3: Change visitBucket() to pass VBucket&, not shared_ptr

Patch 2/3 in addressing the user-after free issue highlighted in
MB-48925.

To minimise the chance of misuse of the vbucket argument passed via
the visit() method; change it from a VBucketPtr (aka
shared_ptr<VBucket>) to VBucket&. This means the caller cannot
accidently retain a refcount on the VBucket.

Change-Id: I5f16e71858cc6ec78f6addd27a8aaf5a82500c46

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2021-10-18 13:35:53.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-10-18 13:55:31.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13541/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13541/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13541/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16074/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0016/0093]: test dcp replica stream one collection...../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:715 Test failed: `" (Expected `118", got `94" - Buffer Size did not get set correctly)
[2021-10-18T13:49:28.025Z] (28024 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16074/ )

ThreadSanitizer issue: heap-use-after-free /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/executor/folly_executorpool.cc:248 in FollyExecutorPool::TaskProxy::resetTaskPtrViaCpuPool()::{lambda()#2}::operator()()::{lambda()#2}::operator()()  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16074/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35031/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41222/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12334/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3172/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14306/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15149/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15426/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23469/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3241/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
